--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #913737;
+    background-color: #ffffff;
     text-align: center;
     margin-top: 350px;
 }
