Update website content in style.css bg color to red

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #552121;
     text-align: center;
     margin-top: 350px;
 }
